Fix broken reference.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -34,7 +34,7 @@
 	title = {Documentation/Read Write Lecture},
 	date = {3 May 2016},
 	howpublished = {\url{https://www.youtube.com/watch?v=ptY6-K78McY}},
-	note{Retrieved 22 May 2016},
+	note = {Retrieved 22 May 2016},
 },
 @misc{zfsinternalstructurevid,
 	author = {Gräf, Ulrich},
