--- a/talk.tex
+++ b/talk.tex
@@ -61,4 +61,10 @@
 	\bibliography{bibliography}
 \end{frame}
 
+\section{Reusing Materials}
+\begin{frame}[allowframebreaks]{Reusing Materials from this Talk}
+\centering
+Please check \texttt{README.md} at \url{https://perma.cschwarz.com/talks/introzfs2016}.
+\end{frame}
+
 \end{document}
