--- a/availibility.tex
+++ b/availibility.tex
@@ -13,7 +13,7 @@
 			\begin{column}{0.5\linewidth}
 				\begin{figure}
 					\centering
-					\includegraphics[height=0.4\textheight]{assets/openzfs_logo}
+					\includegraphics[height=0.4\textheight]{assets/contrib/openzfs/openzfs_logo}
 				\end{figure}
 			\end{column}
 		\end{columns}
