--- a/talk.tex
+++ b/talk.tex
@@ -18,7 +18,7 @@
 \subtitle{A Solid Foundation for Your Data}
 \author{Christian Schwarz}
 \date{GPN16, 28.05.2016}
-\titlegraphic{\includegraphics[width=80pt]{assets/openzfs_logo.pdf}}
+\titlegraphic{\includegraphics[width=80pt]{assets/contrib/openzfs/openzfs_logo}}
 \maketitle
 %
 %\begin{frame}
